--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -173,7 +173,7 @@ Quantum Dynamics --Congjun WU
 </a></li>
 
 <li>
-<a href="https://maggiexheuw.github.io/Conformal/4703031.pptf">
+<a href="https://maggiexheuw.github.io/Conformal/4703031.ppt">
 $T$-invariant Decomposition and the Sign Problem in Quantum Monte Carlo Simulations --Congjun WU 
 </a></li>
 
