--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -17,6 +17,13 @@ tags:
 Lecture Notes On Field Theory In Condensed Matter Physics-- Christopher Mudry 
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/qft/zee.pdf">
+A.Zee quantum field theory note
+</a></li>
+
+
+
 
 ### Classical Yang Mills field 
 
@@ -164,4 +171,58 @@ https://celebratio.org/Atiyah_MF/article/41/">
 Instanton--Michael Atiyah
 </a></li>
 
+
+## Quantum field theory--Qing Wang
+
+
+### Quantum field theory lecture 
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/chapter1.pdf">
+Lecture1--Qiang Wang 
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/chapter2.pdf">
+Lecture2 --Qiang Wang 
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/chapter3.pdf">
+Lecture3 --Qiang Wang 
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/chapter4.pdf">
+Lecture4 --Qiang Wang 
+</a></li>
+
+
+### Homework 
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/Hw1.pdf">
+HW1
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/Hw2.pdf">
+HW2
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/Hw3.pdf">
+HW3
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/Hw4.pdf">
+HW4
+</a></li>
 
