--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -200,6 +200,54 @@ Lecture3 --Qiang Wang
 Lecture4 --Qiang Wang 
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/qft/01_QFT_LiLF.pdf">
+Quantum field theory  --Ling Fong Li 
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/02_QFT_LiLF.pdf">
+Quantum Field Theory, Note 2 --Ling Fong Li 
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/03_QFT_LiLF.pdf">
+QFT-Canonical Quantization --Ling Fong Li 
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/04_QFT_LiLF.pdf">
+QFT Perturbation Theory --Ling Fong Li 
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/05_QFT_LiLF.pdf">
+Quantum field theory  --Ling Fong Li 
+</a></li>
+
+
+
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/06_QFT_LiLF.pdf">
+Quantum field theory  --Ling Fong Li 
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/07_QFT_LiLF.pdf">
+Renormalization  --Ling Fong Li 
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/08_QFT_LiLF.pdf">
+Symmetry and Conservation Laws --Ling Fong Li 
+</a></li>
+
+
+
 
 ### Homework 
 
@@ -221,8 +269,5 @@ HW3
 </a></li>
 
 
-<li>
-<a href="https://maggiexheuw.github.io/qft/Hw4.pdf">
-HW4
-</a></li>
+
 
