--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -4,7 +4,7 @@ title:     Field theory lecture
 subtitle:   
 date:       2024-06-08
 author:     Maggie
-header-img: img/Andersonphoto.jpg
+header-img: img/Polyakov.jpg
 catalog: true
 tags:
     - 
