--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -40,6 +40,11 @@ Quantum Field Theory in Condensed Matter Physics $\text{(one dimensional system)
 Quantum Physics in One Dimension--Thierry Giamarchi
 </a></li>
 
+<li><a href="https://maggiexheuw.github.io/Conformal/Chaikin P.M., Lubensky T.C. - Principles of Condensed Matter Physics-Cambridge University Press (2000).pdf">
+Principle of condensed matter physics--Chaikin
+</a></li>
+
+
 
 ### Superconductivity
 <li><a href="https://maggiexheuw.github.io/pdf/tao.pdf">
