--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -181,26 +181,33 @@ Instanton--Michael Atiyah
 ### Quantum field theory lecture 
 
 <li>
+<a href="https://maggiexheuw.github.io/qft/introduction.pdf">
+Introduction to quantum field theory--Qing Wang 
+</a></li>
+
+
+
+<li>
 <a href="https://maggiexheuw.github.io/qft/chapter1.pdf">
-Lecture1--Qiang Wang 
+Lecture1--Qing Wang 
 </a></li>
 
 
 <li>
 <a href="https://maggiexheuw.github.io/qft/chapter2.pdf">
-Lecture2 --Qiang Wang 
+Lecture2 --Qing Wang 
 </a></li>
 
 
 <li>
 <a href="https://maggiexheuw.github.io/qft/chapter3.pdf">
-Lecture3 --Qiang Wang 
+Lecture3 --Qing Wang 
 </a></li>
 
 
 <li>
 <a href="https://maggiexheuw.github.io/qft/chapter4.pdf">
-Lecture4 --Qiang Wang 
+Lecture4 --Qing Wang 
 </a></li>
 
 <li>
