--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -186,6 +186,13 @@ Introduction to quantum field theory--Qing Wang
 </a></li>
 
 
+<li>
+<a href="https://maggiexheuw.github.io/qft/FT1-24a-westlake.pdf">
+Quantum mechanics and special relativity--Qing Wang 
+</a></li>
+
+
+#### Quantum field theory (2011)
 
 <li>
 <a href="https://maggiexheuw.github.io/qft/chapter1.pdf">
