--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -264,6 +264,11 @@ Concepts-in-high-temperature-superconductivity-- Kilveson
 $SO(5)$ superconductivity-S.C.Zhang 
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/frank06.pdf">
+Physics of Doped Mott-Hubbard Insulators
+and the High-Temperature Superconductors--Claudius Gros
+</a></li>
 
 
 ### Field theory 
@@ -432,4 +437,10 @@ Conformal Bootstrap--Slava Rychkov
 <li>
 <a href="https://maggiexheuw.github.io/Conformal/Mixed Correlators in 3D Conformal Field Theories.pdf">
 Mixed Correlators in 3D Conformal Field Theories--Alex Atanasov
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/SM_Molignini.pdf">
+The Ising model in Conformal Field Theory--Paolo Molignini
 </a></li>
