--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -151,6 +151,18 @@ Topology in magnetism
 </a></li>
 
 
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/SM_Molignini.pdf">
+The Ising model in Conformal Field Theory--Paolo Molignini
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/TopoBookOct27hyperlink.pdf">
+Topological Quantum: Lecture Notes
+and Proto-Book--Kuaffman
+</a></li>
+
+
 ## Field theory textbooks recommended 
 
 <li>
