--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -286,5 +286,11 @@ HW3
 </a></li>
 
 
+### Entanglement entropy 
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/Intro to the RT.pdf">
+Introduction to the Ryu-Takayanagi Formula
+</a></li>
 
 
