--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -405,7 +405,7 @@ Quantum spin liquids--Simon Trebst
 
 
 <li>
-<a href="https://maggiexheuw.github.io/PPTX/Quantum Spin Chains and
+<a href="https://maggiexheuw.github.io/Conformal/Quantum Spin Chains and
 von Neumann Algebra.pdf">
 Quantum Spin Chains and
 von Neumann Algebra
@@ -413,6 +413,11 @@ Lieb-Schultz-Mattis type theorem
 without continuous symmetry--Hal Tasaki
 </a></li>
 
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/SPT2021_Part1(1).pdf">
+SPT and topological index in quantum spin chain--Hal Tasaki
+</a></li>
 
 
 <li>
