--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -442,6 +442,14 @@ in 1d Quantum Many-body Systems--Chang-Tse Hsieh
 </a></li>
 
 
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Oshikawa_CompQCM.pdf">
+The Haldane Phase as a
+Symmetry-Protected Topological
+Phase
+and Quantum Entanglement--Masaki Oshikawa 
+</a></li>
+
 
 
 
