--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -452,6 +452,13 @@ and Quantum Entanglement--Masaki Oshikawa
 
 
 
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Pisa2019.pdf">
+Higher symmetry ’t Hooft anomalies,
+phases, and domain walls--Erich Poppitz 
+</a></li>
+
+
 
 
 ### Conformal field 
