--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -450,6 +450,12 @@ Phase
 and Quantum Entanglement--Masaki Oshikawa 
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Symmetry-Protection_Hamburg-Nov2018.pdf">
+Anomaly and
+Symmetry-Protected
+Critical Phases--Masaki Oshikawa 
+</a></li>
 
 
 <li>
