--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -489,3 +489,12 @@ Mixed Correlators in 3D Conformal Field Theories--Alex Atanasov
 <a href="https://maggiexheuw.github.io/Conformal/SM_Molignini.pdf">
 The Ising model in Conformal Field Theory--Paolo Molignini
 </a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/SYKWestlake.ppt">
+Quantum chaos, Black holes  and   
+Sachdev-Ye-Kitaev (SYK) models--JinWU Ye
+</a></li>
+
+
