--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -197,10 +197,24 @@ Free field theory--Qing Wang
 </a></li>
 
 
+<li>
+<a href="https://maggiexheuw.github.io/qft/FT1-24a-westlake.pdf">
+Quantum mechanics and special relativity--Qing Wang 
+</a></li>
 
-=======
 
->>>>>>> c70aca16dab2f311495d37b22419a528fd3303e3
+<li>
+<a href="https://maggiexheuw.github.io/qft/f2.pdf">
+Free field--Qing Wang 
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/f1.pdf">
+Green function--Qing Wang 
+</a></li>
+
+
 #### Quantum field theory (2011)
 
 <li>
