--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -204,13 +204,13 @@ Quantum mechanics and special relativity--Qing Wang
 
 
 <li>
-<a href="https://maggiexheuw.github.io/qft/f2.pdf">
+<a href="https://maggiexheuw.github.io/Conformal/f2.pdf">
 Free field--Qing Wang 
 </a></li>
 
 
 <li>
-<a href="https://maggiexheuw.github.io/qft/f1.pdf">
+<a href="https://maggiexheuw.github.io/Conformal/f1.pdf">
 Green function--Qing Wang 
 </a></li>
 
