--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -515,3 +515,13 @@ Symmetry protected topological phases
 and
 "orbifolds"--Shinzei Ryu
 </a></li>
+
+
+
+###  Machaine learning 
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/1028.pdf">
+从伊辛模型到神经网络: 2024物理诺奖解读--张潘
+</a></li>
