--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -465,7 +465,12 @@ phases, and domain walls--Erich Poppitz
 </a></li>
 
 
-
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Li (1)_compressed.pdf">
+Reviving the Lieb–Schultz–Mattis
+Theorem in Open Quantum
+Systems--Chengshu Li 
+</a></li>
 
 ### Conformal field 
 
