--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -77,6 +77,16 @@ Juan.Maldcena
 Wei Zhu
 </a></li>
 
+<li>
+<a href="https://sites.google.com/view/peiwang/research"> 
+王沛
+</a></li>
+
+<li>
+<a href="https://sites.google.com/view/peiwang/research"> 
+王沛
+</a></li>
+
 
 
 ## Group theory
