--- a/_posts/2024-8-29-phylec.md
+++ b/_posts/2024-8-29-phylec.md
@@ -20,3 +20,7 @@ tags:
 LSM theorem--Oshikawa$(2024.8.29)$
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/Lecture/_241121_095433.pdf">
+Two dimensional ferromagnet induced by long range interaction---Youjin Deng
+</a></li>
