--- a/_posts/2024-8-29-phylec.md
+++ b/_posts/2024-8-29-phylec.md
@@ -24,5 +24,5 @@ LSM theorem--Oshikawa$(2024.8.29)$
 ### November.2024  
 <li>
 <a href="https://maggiexheuw.github.io/Lecture/_241121_095433.pdf">
-Two dimensional ferromagnet induced by long range interaction---Youjin Deng
+Two dimensional ferromagnet induced by long range interaction---Youjin Deng $(2024.11.21)$
 </a></li>
