--- a/_posts/2024-8-29-phylec.md
+++ b/_posts/2024-8-29-phylec.md
@@ -22,6 +22,14 @@ LSM theorem--Oshikawa$(2024.8.29)$
 
 
 ### November.2024  
+
+<li>
+<a href="https://maggiexheuw.github.io/Lecture/_241121_095433.pdf">
+Fermi polariton---Huihu $(2024.11.12)$
+</a></li>
+
+
+
 <li>
 <a href="https://maggiexheuw.github.io/Lecture/_241121_095433.pdf">
 Two dimensional ferromagnet induced by long range interaction---Youjin Deng $(2024.11.21)$
