--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -215,6 +215,24 @@ Green function--Qing Wang
 </a></li>
 
 
+<li>
+<a href="https://maggiexheuw.github.io/qft/FT3-24-westlake-a.pdf">
+chapter3--Qing Wang 
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/FT4-24-westlake-a.pdf.pdf">
+QED--Qing Wang 
+</a></li>
+
+
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/taskpdf">
+候选小题目--Qing Wang 
+</a></li>
+
 #### Quantum field theory (2011)
 
 <li>
