--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -222,14 +222,14 @@ chapter3--Qing Wang
 
 
 <li>
-<a href="https://maggiexheuw.github.io/qft/FT4-24-westlake-a.pdf.pdf">
+<a href="https://maggiexheuw.github.io/qft/FT4-24-westlake-a.pdf">
 QED--Qing Wang 
 </a></li>
 
 
 
 <li>
-<a href="https://maggiexheuw.github.io/qft/taskpdf">
+<a href="https://maggiexheuw.github.io/qft/task.pdf">
 候选小题目--Qing Wang 
 </a></li>
 
