--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -225,6 +225,21 @@ Deconfined quantum critical points--Leon Balents
 </a></li>
 
 
+<li>
+<a href="https://maggiexheuw.github.io/Lecture/SO5_Talk_updated.pdf">
+Phases of (2+1)D $\mathrm{SO5}$ non-linear sigma model
+with WZW term on a sphere:
+Multi-critical point and disorder phase--Binbin Chen 
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Lecture/nahum.pdf.pdf">
+Intro to deconfined criticality & related ideas--Adam Nahum
+</a></li>
+
+
+
 #### Topological terms
 
 <li>
@@ -529,4 +544,12 @@ and
 <li>
 <a href="https://maggiexheuw.github.io/Conformal/1028.pdf">
 从伊辛模型到神经网络: 2024物理诺奖解读--张潘
+</a></li>
+
+
+### Quantum anomaly 
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Singh.pdf">
+Anomalies and $\theta$ terms on the lattice--Hersh Singh
 </a></li>
