--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -56,6 +56,15 @@ Solutions to Yang-Mills Field Equations
 in Eight Dimensions and the Last Hopf Map
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/qftYanjun-He-QCD-vacuum-and-Instantons.pdf">
+QCD vacuum and Instantons
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/A_instanton.pdf">
+Instantons and their applications--Flip Tanedo
+</a></li>
 
 ### Quaternionic field theory 
 
