--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -234,7 +234,7 @@ Multi-critical point and disorder phase--Binbin Chen
 
 
 <li>
-<a href="https://maggiexheuw.github.io/Lecture/nahum.pdf.pdf">
+<a href="https://maggiexheuw.github.io/Lecture/nahum.pdf">
 Intro to deconfined criticality & related ideas--Adam Nahum
 </a></li>
 
@@ -550,6 +550,6 @@ and
 ### Quantum anomaly 
 
 <li>
-<a href="https://maggiexheuw.github.io/Conformal/Singh.pdf">
+<a href="https://maggiexheuw.github.io/Lecture/Singh.pdf">
 Anomalies and $\theta$ terms on the lattice--Hersh Singh
 </a></li>
