--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -57,12 +57,12 @@ in Eight Dimensions and the Last Hopf Map
 </a></li>
 
 <li>
-<a href="https://maggiexheuw.github.io/qftYanjun-He-QCD-vacuum-and-Instantons.pdf">
+<a href="https://maggiexheuw.github.io/qft/Yanjun-He-QCD-vacuum-and-Instantons.pdf">
 QCD vacuum and Instantons
 </a></li>
 
 <li>
-<a href="https://maggiexheuw.github.io/A_instanton.pdf">
+<a href="https://maggiexheuw.github.io/qft/A_instanton.pdf">
 Instantons and their applications--Flip Tanedo
 </a></li>
 
