--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -553,3 +553,59 @@ and
 <a href="https://maggiexheuw.github.io/Lecture/Singh.pdf">
 Anomalies and $\theta$ terms on the lattice--Hersh Singh
 </a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Lecture/chisb (1).pdf">
+'t Hooft anomaly matching condition
+and
+Chiral symmetry breaking
+without
+fermion bilinear condensate--Oshikawa
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Lecture/chisb (1).pdf">
+'t Hooft anomaly matching condition
+and
+Chiral symmetry breaking
+without
+fermion bilinear condensate--Oshikawa
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Lecture/Shu-Heng-Shao.pdf">
+Symmetries and Their Generalizations
+in Topological Phases of Matter--ShuHeng Shao 
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Lecture/Shu-Heng-Shao.pdf">
+New ’t Hooft anomalies and the
+phases of gauge theories--Erich Poppitz
+</a></li>
+
+
+### Quantum many body scar
+
+<li>
+<a href="https://maggiexheuw.github.io/Lecture/Klebanov.pdf">
+Group Invariant States as
+Quantum Many-Body Scars--Igor R. Klebanov
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Lecture/Nakagawa.pdf">
+Exact eigenstates of multicomponent Hubbard models:
+S\mathrm{SU(N)}$  magnetic η pairing and weak ergodicity breaking-Masaya Nakagawa
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Lecture/y-kikuchi.pdf">
+Global inconsistency and ’t Hooft anomaly in bifundamental gauge theories at finite theta angles
+--Yuta Kikuchi
+</a></li>
+
+
