--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -178,6 +178,11 @@ $T$-invariant Decomposition and the Sign Problem in Quantum Monte Carlo Simulati
 </a></li>
 
 
+<li>
+<a href="https://maggiexheuw.github.io/Lecture/large_spin_fermion_2024.pptx">
+Quantum States with $\mathrm{Sp(2N)}$, 
+$\mathrm{SU(2N)}$ and $\mathrm{G_2}$ symmetries --Congjun WU 
+</a></li>
 
 
 
