--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -603,7 +603,7 @@ Quantum Many-Body Scars--Igor R. Klebanov
 <li>
 <a href="https://maggiexheuw.github.io/Lecture/Nakagawa.pdf">
 Exact eigenstates of multicomponent Hubbard models:
-S\mathrm{SU(N)}$  magnetic η pairing and weak ergodicity breaking-Masaya Nakagawa
+$\mathrm{SU(N)}$  magnetic η pairing and weak ergodicity breaking-Masaya Nakagawa
 </a></li>
 
 
