--- a/_posts/2024-05-20-study.md
+++ b/_posts/2024-05-20-study.md
@@ -271,3 +271,7 @@ anomaly matching in lattice systems--MengCheng,Seiberg
 </a></li>
 
 
+<li>
+<a href="https://maggiexheuw.github.io/pdf1/lJHEP02(2015)172.pdf">
+Generalized global symmetries--MengCheng,Seiberg
+</a></li>
