--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -570,7 +570,6 @@ fermion bilinear condensate--Oshikawa
 
 
 
-
 <li>
 <a href="https://maggiexheuw.github.io/Lecture/Shu-Heng-Shao.pdf">
 Symmetries and Their Generalizations
@@ -589,6 +588,21 @@ phases of gauge theories--Erich Poppitz
 <a href="https://maggiexheuw.github.io/Lecture/y-kikuchi.pdf">
 Global inconsistency and ’t Hooft anomaly in bifundamental gauge theories at finite theta angles
 --Yuta Kikuchi
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Lecture/09h00-Cordova.pdf">
+Generalized Symmetries in
+Quantum Field Theory
+--Clay Córdova
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Lecture/11h15-Bhardwaj.pdf">
+Generalized Global Symmetries in QFTs
+via String Compactifications
+--Lakshya Bhardwaj
 </a></li>
 
 
