--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -28,6 +28,21 @@ Axial anomaly
 </a></li>
 
 
+<li>
+<a href="https://maggiexheuw.github.io/Lecture/Asymptotic1.pdf">
+Asymptotic freedom and the beta-function
+$\phi^4$ , $2d \sigma-$ model, $QCD$--David Oehri
+</a></li>
+
+<li>
+<a href="https://web2.ph.utexas.edu/~vadim/Classes/2022f/lecturelog.html">
+Callan-Symanzik method as a finite approach to
+QFT: non-renormalizable theory case--Yulia Ageeva
+</a></li>
+
+
+
+
 ### Classical Yang Mills field 
 
 
