--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -35,10 +35,19 @@ $\phi^4$ , $2d \sigma-$ model, $QCD$--David Oehri
 </a></li>
 
 <li>
-<a href="https://web2.ph.utexas.edu/~vadim/Classes/2022f/lecturelog.html">
+<a href="https://maggiexheuw.github.io/Lecture/Ageeva_Quarks_presentation.pdf">
 Callan-Symanzik method as a finite approach to
 QFT: non-renormalizable theory case--Yulia Ageeva
 </a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Lecture/Ageeva_Quarks_presentation.pdf">
+Advanced Quantum Field Theory--Miguel
+</a></li>
+
+
+
+
 
 
 
