--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -90,6 +90,13 @@ QCD vacuum and Instantons
 Instantons and their applications--Flip Tanedo
 </a></li>
 
+
+<li>
+<a href="https://maggiexheuw.github.io/qft/Atiyah+M.+Geometry+of+Yang-Mills+Fields+(Pisa,+1979)(100s).pdf">
+Geometry
+of Yang-Mills Fields--Atiyah
+</a></li>
+
 ### Quaternionic field theory 
 
 <li>
