--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -77,13 +77,26 @@ $SU(4)$ Hubbard model
 Quantum hall and entanglement entropy --N. Shibata
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/PPTX/1267175129ICMP09_FQH_ANDREAS_LAUCHLI.pdf">
+Entanglement spectrum of fractional quantum hall states 
+</a></li>
 
 
+<li>
+<a href="https://maggiexheuw.github.io/PPTX/uiuc_jpg.pdf">
+Gapless spectrum and FQHE and topological insulators--Haldane 
+</a></li>
 
 
-
-
+<li>
+<a href="https://maggiexheuw.github.io/PPTX/talk2336.pdf">
+Quantum Entanglement and
+Topological Order--Ashvin Vishwanath
+</a></li>
 ### Hubbrad model 
+
+
 
 <li>
 <a href="https://maggiexheuw.github.io/Group/Assaad_CompQCM_KITP.pdf">
