--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -197,7 +197,10 @@ Quantum States with $\mathrm{Sp(2N)}$,
 $\mathrm{SU(2N)}$ and $\mathrm{G_2}$ symmetries --Congjun WU 
 </a></li>
 
-
+<li>
+<a href="https://maggiexheuw.github.io/Lecture/Spin32_Princeton2006.ppt">
+Spin $\frac{3}{2}$ princeton --Congjun WU 
+</a></li>
 
 
 
