--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -321,6 +321,13 @@ Field Theory--Nathan Seiberg
 Field Theory and Electroweak Standard Model--Faisal Akram
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/7th_LHC_school_2018_Lecture1__2__and_3_faisal.pptx">
+Field Theory and Electroweak Standard Model--Faisal Akram
+</a></li>
+
+
+
 
 ### Topological physics
 
@@ -418,6 +425,20 @@ Topological Field Theory for p-wave SCs--Hannson
 <li>
 <a href="https://maggiexheuw.github.io/pdf2/moore_2.pdf">
 Electrodynamics in topological insulators--Moore
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/moore_2.pdf">
+Electrodynamics in topological insulators--Moore
+</a></li>
+
+
+
+<li>
+<a href="https://maggiexheuw.github.io/PPTX/J-Moore.pdf">
+Abelian and non-Abelian gauge fields in the
+Brillouin zone for insulators and metals--Moore
 </a></li>
 
 
@@ -537,6 +558,22 @@ The Ising model in Conformal Field Theory--Paolo Molignini
 Quantum chaos, Black holes  and   
 Sachdev-Ye-Kitaev (SYK) models--JinWU Ye
 </a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/SYKWestlake.ppt">
+Quantum chaos, Black holes  and   
+Sachdev-Ye-Kitaev (SYK) models--JinwU Ye
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/PPTX/2019-05-03-ising-talk.pdf">
+A 3d Ising model
+with a weakly-coupled string dual--Mc Greevy
+</a></li>
+
+
 
 
 ###  Topological phase classification 
