--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -113,7 +113,16 @@ Composite fermion-- Jainendra K. Jain
 
 <li><a href="https://maggiexheuw.github.io/Conformal/CONDMAT.pdf">
 Lecture Notes on Condensed Matter Physics
-$(A Work in Progress)$-- Arovas
+$(\text{A Work in Progress})$-- Arovas
+</a></li>
+
+<li><a href="https://maggiexheuw.github.io/Conformal/The Quantum Hall Effect (Richard E. Prange (auth.), Richard E. Prange etc.) (Z-Library).pdf">
+Quantum hall effect-- Stephen Girven 
+</a></li>
+
+
+<li><a href="https://maggiexheuw.github.io/Conformal/[Springer Series in Solid-State Sciences №133] Prof. Daijiro Yoshioka (auth.) - The Quantum Hall Effect (2002, Springer) [10.1007_978-3-662-05016-3] - libgen.li.pdf">
+Quantum hall effect-- Yoshida
 </a></li>
 
 
@@ -310,3 +319,10 @@ Topological Aspects of Condensed Matter Physics --Claudio Chamon
 
 
 
+### Statistical mechanics 
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Statistical Field Theory - An Introduction to Exactly Solved Models in Statistical Physics (Giuseppe Mussardo) (Z-Library).pdf">
+Statistical Field Theory - An Introduction to Exactly Solved Models in Statistical Physics --Giuseppe Mussardo 
+</a></li>
