--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -90,6 +90,12 @@ Tasaki
 </a></li>
 
 
+<li><a href="https://www.nikhef.nl/~t58/Site/Lectures.html"> 
+Bert Schellekens--String theory
+</a></li>
+
+
+
 ## Group theory
 
 <li><a href="https://www.math.nagoya-u.ac.jp/~yamagami/"> 
