--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -112,6 +112,10 @@ Group theory--Milne
 </a></li>
 
 
+<li><a href="https://birdtracks.eu/courses/QCD19/"> 
+QCD and Lie group ---Saint-Jacut-de-la-Mer, France
+</a></li>
+
 
 ## Toopologcal phase
 <li><a href="https://grushingroup.cnrs.fr/lectures-and-resources/physics_lectures/"> 
@@ -187,7 +191,11 @@ Conformal field theory and representation--Stanford
 Ising CFT--Alex Atanasov
 </a></li>
 
+## Conformal field theory 
 
+<li><a href="http://msstp.org/?q=node/283"> 
+CFT summer school
+</a></li>
 
 
 ## Tools
