--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -203,7 +203,17 @@ Spin $\frac{3}{2}$ princeton --Congjun WU
 </a></li>
 
 
+li>
+<a href="https://maggiexheuw.github.io/PPTX/Wu_HigherTc_KITP.pdf">
+Novel Orbital Phases of Cold Atoms– Unconventional
+BEC, Cooper pairing, and frustration --Congjun WU 
+</a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/PPTX/Wu_LowDimConf_KITP.pdf">
+Novel Orbital Phases of Fermions
+in p-band Optical Lattices--Congjun WU 
+</a></li>
 
 
 ### Entangle ment Enropy 
