--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -94,6 +94,10 @@ Tasaki
 Bert Schellekens--String theory
 </a></li>
 
+<li><a href="https://luhaizhou.wixsite.com/website/%E5%89%AF%E6%9C%AC-publications"> 
+卢海舟
+</a></li>
+
 
 
 ## Group theory
