--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -695,4 +695,18 @@ $\mathrm{SU(N)}$  magnetic η pairing and weak ergodicity breaking-Masaya Nakaga
 
 
 
+### Quantum geometry
 
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Note/25_08_Shanghai.pdf">
+Quantum Geometry of Mixed States and Exact Sum Rules--- Jie Wang 
+</a></li>
+
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Note/25_09_HongKong.pdf">
+Exact Parent Hamiltonian for Quantum Hall States on Lattice--- Jie Wang 
+</a></li>
