--- a/_posts/2025-4-17-Code.md
+++ b/_posts/2025-4-17-Code.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     Category and conformal field theory 
+title:      Code 
 subtitle:   
 date:       2025-04-17
 author:     Maggie
