--- a/_posts/2025-11-04-Condense.md
+++ b/_posts/2025-11-04-Condense.md
@@ -19,3 +19,20 @@ tags:
 <a href="https://maggiexheuw.github.io/Note/Quantum Transport Theory.pdf">
 Quantum transport --- Wei Chen  
 </a></li>
+
+
+
+
+### Condense mater field theory 
+
+<li>
+<a href="https://maggiexheuw.github.io/Note/Frakin.pdf">
+Field Theoretic Aspects of Condensed Matter Physics --- Eduardo Fradkin
+</a></li>
+
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Note/Frakin.pdf">
+Classical field theory--- Bertrand Berche(French)
+</a></li>
