--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -215,6 +215,18 @@ Novel Orbital Phases of Fermions
 in p-band Optical Lattices--Congjun WU 
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/PPTX/wsc.pptx">
+王守竞对量子化学的贡献 - 量子百年纪念--Congjun WU 
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/PPTX/Uncon_Mag_NCS.pptx">
+Unconventional magnetism and spontaneous 
+spin-orbit ordering--Congjun WU 
+</a></li>
+
+
 
 ### Entangle ment Enropy 
 
