--- a/_posts/2025-11-04-Condense.md
+++ b/_posts/2025-11-04-Condense.md
@@ -33,6 +33,6 @@ Field Theoretic Aspects of Condensed Matter Physics --- Eduardo Fradkin
 
 
 <li>
-<a href="https://maggiexheuw.github.io/Note/Frakin.pdf">
-Classical field theory--- Bertrand Berche(French)
+<a href="https://maggiexheuw.github.io/Note/CFt.pdf">
+Classical field theory--- Bertrand Berche $($ French $)$
 </a></li>
