--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -723,3 +723,13 @@ Quantum Geometry of Mixed States and Exact Sum Rules--- Jie Wang
 <a href="https://maggiexheuw.github.io/Note/25_09_HongKong.pdf">
 Exact Parent Hamiltonian for Quantum Hall States on Lattice--- Jie Wang 
 </a></li>
+
+
+
+### Generalized symetry
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Note/ubcstringtalkoct32025.pdf">
+Homotopy Charge, Anomalies and non-Fermi Liquids--- Jinchao-Zhao
+</a></li>
