--- a/_posts/2024-05-20-study.md
+++ b/_posts/2024-05-20-study.md
@@ -124,6 +124,25 @@ Topological Approach to Luttinger’s Theorem and the Fermi Surface of a Kondo L
 </a></li>
 
 
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/2506.04342v1.pdf">
+The Luttinger Count is the Homotopy not the Physical Charge: Generalized Anomalies
+Characterize Non-Fermi Liquids-2025
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/Senthil-Fermi surface anomaly.pdf">
+Non-Fermi Liquids as Ersatz Fermi Liquids: General Constraints on Compressible Metals--Senthil-2021
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/Kane-Luttinger.pdf">
+Absence of Luttinger’s Theorem due to Zeros in the Single-Particle Green Function--Charles Kane-2013
+</a></li>
+
+
 ## Hopf Insulator 
 
 <li>
