--- a/_posts/2025-11-24-soft.md
+++ b/_posts/2025-11-24-soft.md
@@ -22,12 +22,16 @@ Universal Non-Hermitian Transport in Disordered Systems --- Zhong Wang
 
 
 
+<li>
+<a href="https://maggiexheuw.github.io/Soft/Kardar-Parisi-Zhang Scaling in Time-Crystalline Matter.pdf">
+Kardar-Parisi-Zhang Scaling in Time-Crystalline Matter --- Sebastian Diehl
+</a></li>
 
 
 
 <li>
-<a href="https://maggiexheuw.github.io/Soft/Kardar-Parisi-Zhang Scaling in Time-Crystalline Matter.pdf">
-Kardar-Parisi-Zhang Scaling in Time-Crystalline Matter --- Sebastian Diehl
+<a href="https://maggiexheuw.github.io/Soft/Fingering Instability Accelerates Population Growth of a Proliferating Cell Collectiv.pdf">
+Fingering Instability Accelerates Population Growth of a Proliferating Cell Collectiv
 </a></li>
 
 
@@ -44,4 +48,15 @@ Kibble–Zurek mechanism in colloidal monolayers
 <li>
 <a href="https://maggiexheuw.github.io/Soft/Derivation of a hydrodynamic theory for mesoscale dynamics in microswimmer suspensions.pdf">
 Derivation of a hydrodynamic theory for mesoscale dynamics in microswimmer suspensions
+</a></li>
+
+
+
+### Topological defect 
+
+<li>
+<a href="https://maggiexheuw.github.io/Soft/Topological defect-mediated morphodynamics of active–active
+interfaces.pdf">
+Topological defect-mediated morphodynamics of active–active
+interfaces
 </a></li>
